[metadata]
name = drishti-io
description = Drishti is a command-line tool to guide end-users in optimizing I/O in their applications by detecting typical I/O performance pitfalls and providing a set of recommendations. 
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/hpc-io/drishti
keywords = drishti
version = 0.3.3
author = Jean Luca Bez, Suren Byna
author_email = jlbez@lbl.gov, sbyna@lbl.gov
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = True
install_requires =
    argparse
    pandas
    darshan
python_requires = >= 3.6

[options.package_data]
snippets = 
    drishti/snippets/*

[options.entry_points]
console_scripts = 
    drishti = drishti.main:main
